--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ title: Alejandro Escalante
 description: una pagina personal
 show_downloads: true
 other:
-  home: https://alex-esc.github.io/
-  docs: https://alex-esc.github.io/docs/document_index.html
-  about: https://alex-esc.github.io/pages/about.html
+  home: https://alex-esc.github.io/light/
+  docs: https://alex-esc.github.io/light/docs/document_index.html
+  about: https://alex-esc.github.io/light/pages/about.html
